csrc/tests/codegen_probes/errors/err_return_no_value_in_func.bas
' REJECT: bare RETURN inside a FUNCTION.
' zxbparser p_return:2106 "Syntax Error: Function must RETURN a value.".
Function f As Integer
  Return
End Function
Dim x As Integer
x = f()
